# svg-ml-project

./: .gitignore  README.md  data.py  main.py  preprocessing.py  pyproject.toml  tokenizer.py
transformer/: generate.py  model.py  model_mup.py  scaling_plot.py  scaling_plot_comparison.py  train.py  train_mup.py
transformer/runs/: large_lr1e-02_results.json  lr_sweep.json  medium_lr1e-02_results.json  small_lr1e-02_results.json  tiny_lr1e-02_results.json  tiny_lr1e-03_results.json  tiny_lr1e-04_results.json  tiny_lr1e-05_results.json  tiny_lr3e-03_results.json  xl_lr1e-02_results.json
transformer/runs/lr_sweep/: tiny_lr3e-04_results.json  tiny_lr3e-05_results.json
transformer/runs/mup/: base_shapes_large.bsh  base_shapes_medium.bsh  base_shapes_tiny.bsh  base_shapes_xl.bsh  large_lr1e-02_mup_results.json  medium_lr1e-02_mup_results.json  small_lr1e-02_mup_results.json  tiny_lr1e-02_mup_results.json  xl_lr1e-02_mup_results.json
transformer/runs/mup/lr_sweep/: lr_sweep_mup.json  tiny_lr1e-02_mup_results.json  tiny_lr1e-03_mup_results.json  tiny_lr1e-04_mup_results.json  tiny_lr1e-05_mup_results.json  tiny_lr3e-03_mup_results.json  tiny_lr3e-04_mup_results.json  tiny_lr3e-05_mup_results.json
