[project]
name = "svg-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "datasets>=4.8.5",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "scipy>=1.17.1",
    "tokenizers>=0.23.1",
    "torch>=2.11.0",
]



[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
